--- a/src/main/resources/templates/homePage/index.html
+++ b/src/main/resources/templates/homePage/index.html
@@ -8,6 +8,9 @@
 	<div th:replace="~{homePage/fragments/navHeader :: navHeader}"></div>
 	<!-- Header END -->
 
+	<!-- Notification Fragment -->
+	<div th:replace="~{homePage/fragments/notification :: notification}"></div>
+
 	<!-- **************** MAIN CONTENT START **************** -->
 
 	<div th:replace="~{__${fragmentContent}__}"></div>
