--- a/src/main/resources/templates/homePage/course-detail.html
+++ b/src/main/resources/templates/homePage/course-detail.html
@@ -768,7 +768,7 @@ Page content START -->
 										<!-- Buttons -->
 										<div class="mt-3 d-sm-flex justify-content-sm-between">
 											<th:block th:if="${isEnrolled}">
-												<a th:href="@{/learning/course/view(courseId=${course.courseId})}" class="btn btn-sm btn-primary-soft mb-0">Continue</a>
+												<a th:href="@{/learning/course/view/{courseId}(courseId=${course.courseId})}" class="btn btn-sm btn-primary-soft mb-0">Continue</a>
 											</th:block>
 											<th:block th:unless="${isEnrolled}">
 												<button type="button"
@@ -786,7 +786,6 @@ Page content START -->
 									</div>
 								</div>
 								<!-- Video END -->
-
 								<!-- Course info START -->
 								<div class="card card-body shadow p-4 mb-4">
 									<!-- Title -->
