--- a/src/main/resources/templates/adminDashBoard/fragments/ordersContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/ordersContent.html
@@ -83,7 +83,8 @@
                                             <th>Order Type</th>
                                             <th>Status</th>
                                             <th>Order Date</th>
-                                            <th>Note</th>
+                                            <th>RefCode</th>
+                                            <th>Description</th>
                                             <th>Username</th>
                                             <th>Action</th>
                                         </tr>
@@ -112,7 +113,8 @@
                                             <th>Order Type</th>
                                             <th>Status</th>
                                             <th>Order Date</th>
-                                            <th>Note</th>
+                                            <th>RefCode</th>
+                                            <th>Description</th>
                                             <th>Username</th>
                                             <th>Action</th>
                                         </tr>
